--- a/catalog/view/theme/default/template/product/category.twig
+++ b/catalog/view/theme/default/template/product/category.twig
@@ -132,6 +132,7 @@
             <div>
               <div class="caption">
                 <h4><a href="{{ product.href }}">{{ product.name }}</a></h4>
+                <h5>{{ product.name_alternative }}</h5>
                 <p>{{ product.description }}</p>
                 {% if product.price %}
                 <p class="price"> {% if not product.special %}
