--- a/system/storage/modification/admin/view/template/catalog/product_form.twig
+++ b/system/storage/modification/admin/view/template/catalog/product_form.twig
@@ -56,6 +56,12 @@
                         {% endif %} </div>
                     </div>
                     <div class="form-group">
+                      <label class="col-sm-2 control-label" for="input-name_alternative{{ language.language_id }}">{{ name_alternative }}</label>
+                      <div class="col-sm-10">
+                        <input type="text" name="product_description[{{ language.language_id }}][name_alternative]" value="{{ product_description[language.language_id] ? product_description[language.language_id].name_alternative }}" placeholder="{{ name_alternative }}" id="input-name_alternative{{ language.language_id }}" class="form-control"/>
+                      </div>
+                    </div>
+                    <div class="form-group">
                       <label class="col-sm-2 control-label" for="input-description{{ language.language_id }}">{{ entry_description }}</label>
                       <div class="col-sm-10">
                         <textarea name="product_description[{{ language.language_id }}][description]" placeholder="{{ entry_description }}" id="input-description{{ language.language_id }}" data-toggle="summernote" data-lang="{{ summernote }}" class="form-control">{{ product_description[language.language_id] ? product_description[language.language_id].description }}</textarea>
