--- a/system/storage/modification/admin/view/template/common/header.twig
+++ b/system/storage/modification/admin/view/template/common/header.twig
@@ -72,7 +72,7 @@
 		<li><a href="https://www.opencart.ru/documentation" target="_blank"><i class="fa fa-file-text-o fa-fw"></i> {{ text_documentation }}</a></li>
 		
           
-		<li><a href="https://www.opencart.ru/support" target="_blank"><i class="fa fa-comments-o fa-fw"></i> {{ text_support }}</a></li>
+		<li><a href="https://www.opencart.ru/support target="_blank"><i class="fa fa-comments-o fa-fw"></i> {{ text_support }}</a></li>
 		
         </ul>
       </li>
